<resources>
    <string name="app_name">Film Cast</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="toggle_password_visibility"> </string>
    <string name="IS_iniciar_sesion.tx">Iniciar Sesion</string>
    <string name="IS_email.tx">Email</string>
    <string name="IS_Contraseña">Contraseña</string>
    <string name="IS_Registrarse">Registrarse</string>
    <string name="IS_Or">ó</string>
    <string name="IS_terminos">By continuing you are agreed the terms and conditions and privacy policy.</string>
    <string name="menu_titulo">"Menú"</string>
    <string name="menu_titulo2">"¿Que quieres hacer hoy?"</string>
    <string name="menu_conecta">"Conecta con el actor perfecto"</string>
    <string name="menu_conecta_text">"Solo dinos que estamos buscando, nosotros hacemos la magia"</string>
    <string name="menu_conecta_boton">"Buscar"</string>
    <string name="menu_gestion">"Gestiona tus actores"</string>
    <string name="menu_gestion_text">"Gestiona a tus actores y asegura el intérprete perfecto para cada personaje."</string>
    <string name="menu_gestion_boton">"Guardados"</string>
    <string name="menu_proyectos">"Tus Proyectos"</string>
    <string name="pr1_titulo">"Casa embrujada"</string>
    <string name="pr1_info_actores">"3 confirmados, 1 por confirmar"</string>
    <string name="pr1_fecha">"2 de marzo"</string>
    <string name="pr1_mensaje">"2 mensajes nuevos"</string>
    <string name="pr1_direccion">"Cra 4# 22 66"</string>
    <string name="pr2_titulo">"Titanic 2"</string>
    <string name="pr2_info_actores">"700 confirmados, 1500 por confirmar"</string>
    <string name="pr2_fecha">"30 de febrero"</string>
    <string name="pr2_mensaje">"60 mensajes nuevos"</string>
    <string name="pr2_direccion">"Oceano Atrantico"</string>
    <string name="Perfil_actor">"Perfil del Actor"</string>
    <string name="PA_Edad">"Edad"</string>
    <string name="PA_Nacionalidad">"Nacionalidad"</string>
    <string name="PA_Actividad_años">"Años de Actividad"</string>
    <string name="PA_genero">"Genero"</string>
    <string name="PA_Belleza">"Belleza"</string>
    <string name="PA_exp">"Habilidad"</string>
    <string name="PA_Educacion">"Grado de educacion"</string>
    <string name="PA_premios">"Premios ganados"</string>
    <string name="PA_media">"Menciones en redes sociales"</string>
    <string name="PA_genero_cine">Categoría fílmica</string>
    <string name="PA_Nombre_txt">"Valor retornado por el modelo"</string>
    <string name="PA_Edad_txt">"Valor retornado por el modelo"</string>
    <string name="PA_Nacionalidad_txt">"Valor retornado por el modelo"</string>
    <string name="PA_Actividad_años_txt">"Valor retornado por el modelo"</string>
    <string name="PA_genero_txt">"Valor retornado por el modelo"</string>
    <string name="PA_Belleza_txt">"Valor retornado por el modelo"</string>
    <string name="PA_exp_txt">"Valor retornado por el modelo"</string>
    <string name="PA_Educacion_txt">"Valor retornado por el modelo"</string>
    <string name="PA_premios_txt">"Valor retornado por el modelo"</string>
    <string name="PA_media_txt">"Valor retornado por el modelo"</string>
    <string name="Bu_titulo">Buscar</string>
    <string-array name="Bu_edad">
        <item>Edad</item>
        <item>18–20</item>
        <item>20–25</item>
        <item>26–30</item>
        <item>31–35</item>
        <item>36–40</item>
        <item>41–45</item>
        <item>46–50</item>
        <item>51 o más</item>
    </string-array>
    <string name="Bu_filmico">Genero Filmico</string>
    <string-array name="Bu_salario">
        <item>Rango Salarial</item>
        <item>10.000–50.000</item>
        <item>50.001–100.000</item>
        <item>100001–500.000</item>
        <item>500001–1´000.000</item>
        <item>1´000.001–1´500.000</item>
        <item>1´500.001–000</item>
    </string-array>
    <string name="Bu_educativo">Educacion</string>
    <string name="Bu_año_act">Años Actividad</string>
    <string name="Bu_nacionalidad">Nacionalidad</string>
    <string-array name="Bu_premios">
        <item>Numero de premios</item>
        <item>0–3</item>
        <item>3–7</item>
        <item>7–10</item>
        <item>10–14</item>
        <item>14–20</item>
    </string-array>
    <string name="Bu_redes_menciones">Menciones</string>
    <string name="Bu_tamaño_pagina">Pagina</string>
    <string name="Bu_redes_likes">Likes</string>
    <string name="Bu_redes_seguidores">Seguidores</string>
    <string-array name="Bu_genero">
        <item>Genero de nacimiento</item>
        <item>Femenino</item>
        <item>Maculino</item>
    </string-array>
    <string name="Bu_rango_belleza">Belleza</string>
    <string name="Bu_Buscar">Buscar</string>
    <string name="GA_boton_buscar">Buscar</string>
    <string name="GA_boton_volver">Volver</string>
    <string name="GA_titulo">Actores Guardados</string>
    <string name="GA1_Nombre">Nombre</string>
    <string name="GA1_Genero">Género</string>
    <string name="GA1_precio">Precio</string>
    <string name="GA1_cineGenero">Género Cine</string>
    <string name="Pe_titulo">Perfil</string>
    <string name="Pe_Nombre">Nombre</string>
    <string name="Pe_email">Email</string>
    <string name="Pe_telefono">Teléfono</string>
    <string name="Pe_estellas">Estrellas</string>
    <string name="Pe_genero">Género</string>
    <string name="Pe_rol">Rol</string>
    <string name="Pe_cerrar_sesion">Cerrar sesión</string>
    <string-array name="Bu_Cinematigrafia">
        <item>Cinematografia</item>
        <item>Comedia</item>
        <item>Drama</item>
        <item>Accion</item>
        <item>Sci-Fi</item>
        <item>Romance</item>
    </string-array>
    <string-array name="Bu_educacion">
        <item>Nivel educactivo</item>
        <item>Universidad</item>
        <item>Colegiatura</item>
        <item>Graduado</item>
        <item>Secundaria</item>
    </string-array>
    <string-array name="Bu_Belleza">
        <item>Belleza</item>
        <item>0–2</item>
        <item>2–4</item>
        <item>4–6</item>
        <item>6–8</item>
        <item>8–10</item>
    </string-array>
    <string-array name="Bu_Nacionalidad">
        <item>Nacionalidad</item>
        <item>USA</item>
        <item>Canada</item>
    </string-array>
    <string-array name="Bu_habilidad">
        <item>Nivel de Habilidad</item>
        <item>0–2</item>
        <item>3–5</item>
        <item>6–8</item>
        <item>9–10</item>
    </string-array>
    <string-array name="Bu_Menciones">
        <item>Menciones en redes</item>
        <item>0–15</item>
        <item>16–30</item>
        <item>31–45</item>
        <item>46–60</item>
        <item>60 o más</item>
    </string-array>
    <string-array name="Bu_likes">
        <item>Liekes en redes</item>
        <item>0–500</item>
        <item>501–1500</item>
        <item>1501–3000</item>
        <item>3001–4500</item>
        <item>4501–6000</item>
        <item>6001 o más</item>
    </string-array>
    <string-array name="Bu_tamaño_pag">
        <item>Tamaño de pagina</item>
        <item>0–2</item>
        <item>2–4</item>
        <item>4–6</item>
        <item>6–8</item>
        <item>8–10</item>
    </string-array>
    <string-array name="Bu_seguidores">
        <item>0–1000</item>
        <item>1001–8000</item>
        <item>8001–12.000</item>
        <item>12.001–18.000</item>
        <item>18.001–24.001</item>
        <item>24.001 o más</item>
    </string-array>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="tv_registro">Registrarse</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="tv_login">Iniciar Sesion</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_register">Registrarse</string>
    <string name="tv_or">Or</string>
    <string name="tv_terms_conditions">By continuing you are agreed the terms and conditions and privacy policy.</string>
</resources>